--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
+    <script src="app/js/base/base.js"></script>
+    <script src="app/js/main.js"></script>
   </head>
   <body>
       <h1>Hello world</h1>
+      <div id="test"></div>
   </body>
 </html>
