--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>
   <head>
+    <script src="app/js/underscore/underscore.js"></script>
     <script src="app/js/base/base.js"></script>
-    <script src="app/js/main.js"></script>
+
   </head>
   <body>
       <h1>Hello world</h1>
-      <div id="test"></div>
+      <div id="test">
+        Me gustaría que toda la aplicación se sostenga en este espacio
+      </div>
+
+      <script src="app/js/main.js"></script>
   </body>
+
 </html>
