at same step at from 3 years ago, two arrat one filter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   </head>
   <body>
-      <h1>Hello world</h1>
+      <h1>Functional javascript</h1>
       <div id="test">
         Me gustaría que toda la aplicación se sostenga en este espacio
       </div>
