--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta charset="utf-8" />
+
+
     <script src="app/js/underscore/underscore.js"></script>
     <script src="app/js/base/base.js"></script>
 
@@ -9,8 +12,12 @@
       <h1>Functional javascript</h1>
       <div id="test">
         Me gustaría que toda la aplicación se sostenga en este espacio
+        <br />
+        <a href="#link1" onclick="route('#link1');">link 1</a>
+        <br />
+        <a href="#link-2" onclick="route('#link2');">link 2</a>
       </div>
-
+      <script src="app/js/base/vera.js"></script>
       <script src="app/js/main.js"></script>
   </body>
 
