--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8">
     <script src="app/js/underscore/underscore.js"></script>
     <script src="app/js/base/base.js"></script>
 
