--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <meta charset="UTF-8">
     <script src="app/js/underscore/underscore.js"></script>
     <script src="app/js/base/base.js"></script>
-
-
+    <script src="https://unpkg.com/vue"></script>
+    <script src="app/js/main.js"></script>
   </head>
   <body>
       <h1>Functional javascript</h1>
-      <div id="test">
-        Me gustaría que toda la aplicación se sostenga en este espacio
+      <div id="app">
+        {{ message }}
       </div>
 
       <script src="app/js/main.js"></script>
