--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <script src="app/js/underscore/underscore.js"></script>
     <script src="app/js/base/base.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://unpkg.com/vue"></script>
-    <script src="app/js/main.js"></script>
   </head>
   <body>
       <h1>Functional javascript</h1>
