--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <script src="app/js/base/base.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://unpkg.com/vue"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-      <h1>Functional javascript</h1>
-      <div id="app">
-        {{ message }}
+    <div class="row">
+      <div class="col-xs-9">
+        <h1>Functional javascript</h1>
+        <div id="app" class="col-md-4 col-md-offset-4">
+          {{ message }}<br/>
+          <input v-model="search">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">buscador en json</label>
+              <input type="email" class="form-control" id="search" placeholder="buscarrr" v-model.lazy="search">
+            </div>
+            <button type="submit" class="btn btn-default">no lo necesito es 1to1 bind</button>
+          </form>
+        </div>
       </div>
-
+    </div>
       <script src="app/js/main.js"></script>
   </body>
 
