--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <meta charset="UTF-8">
     <script src="app/js/underscore/underscore.js"></script>
     <script src="app/js/base/base.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.4.1/Rx.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://unpkg.com/vue"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
@@ -20,12 +23,13 @@
               <label for="exampleInputEmail1">buscador en json</label>
               <input type="email" class="form-control" id="search" placeholder="buscarrr" v-model.lazy="search">
             </div>
-            <button type="submit" class="btn btn-default">no lo necesito es 1to1 bind</button>
+            <button type="button" class="btn btn-default" onclick="apd();">no lo necesito es 1to1 bind</button>
           </form>
         </div>
       </div>
     </div>
       <script src="app/js/main.js"></script>
+      <script src="app/js/base/binder.js"></script>
   </body>
 
 </html>
