--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <script src="app/js/underscore/underscore.js"></script>
+    <script src="app/js/base/validQuery.js"></script>
     <script src="app/js/base/base.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.4.1/Rx.js"></script>
