conectado a mutable, pero no me gusta el uso de localstorage

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <script src="app/js/immutable/bundle.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
       <div id="app" class="row"></div>
       <script src="app/js/vue.js"></script>
   </body>
-
 </html>
